# VaccinationDistribution

./: .envrc  .gitignore  .gitmodules  README.md  environment.yml  logging.db  tox.ini
.github/workflows/: ci.yml
amici_models/tmp0n6wklye/: CMakeLists.txt  compileMexFile.m  setup.py  tmp0n6wklye.cpp  tmp0n6wklye.h  tmp0n6wklye_Jy.cpp  tmp0n6wklye_dJydsigma.cpp  tmp0n6wklye_dJydy.cpp  tmp0n6wklye_dJydy.h  tmp0n6wklye_dJydy_colptrs.cpp  tmp0n6wklye_dJydy_rowvals.cpp  tmp0n6wklye_deltasx.cpp  tmp0n6wklye_dwdp.cpp  tmp0n6wklye_dwdp_colptrs.cpp  tmp0n6wklye_dwdp_rowvals.cpp  tmp0n6wklye_dwdw.cpp  tmp0n6wklye_dwdw.h  tmp0n6wklye_dwdw_colptrs.cpp  tmp0n6wklye_dwdw_rowvals.cpp  tmp0n6wklye_dwdx_colptrs.cpp  tmp0n6wklye_dwdx_rowvals.cpp  tmp0n6wklye_dxdotdw.cpp  tmp0n6wklye_dxdotdw_colptrs.cpp  tmp0n6wklye_dxdotdw_rowvals.cpp  tmp0n6wklye_dydx.cpp  tmp0n6wklye_k.h  tmp0n6wklye_root.cpp  tmp0n6wklye_sigmay.cpp  tmp0n6wklye_stau.cpp  tmp0n6wklye_sx0_fixedParameters.cpp  tmp0n6wklye_w.cpp  tmp0n6wklye_x0.cpp  tmp0n6wklye_x0_fixedParameters.cpp  tmp0n6wklye_x_rdata.cpp  tmp0n6wklye_x_rdata.h  (+6 more)
amici_models/tmp2kc_o5jm/: CMakeLists.txt  compileMexFile.m  dwdp.h  k.h  setup.py  tmp2kc_o5jm.cpp  tmp2kc_o5jm.h  tmp2kc_o5jm_J.cpp  tmp2kc_o5jm_JB.cpp  tmp2kc_o5jm_JDiag.cpp  tmp2kc_o5jm_JSparse.cpp  tmp2kc_o5jm_JSparseB.cpp  tmp2kc_o5jm_JSparseB_colptrs.cpp  tmp2kc_o5jm_JSparseB_rowvals.cpp  tmp2kc_o5jm_JSparse_colptrs.cpp  tmp2kc_o5jm_JSparse_rowvals.cpp  tmp2kc_o5jm_Jy.cpp  tmp2kc_o5jm_dJydsigmay.cpp  tmp2kc_o5jm_dJydy.cpp  tmp2kc_o5jm_dJydy_colptrs.cpp  tmp2kc_o5jm_dJydy_rowvals.cpp  tmp2kc_o5jm_dsigmaydp.cpp  tmp2kc_o5jm_dspline_slopesdp.cpp  tmp2kc_o5jm_dspline_valuesdp.cpp  tmp2kc_o5jm_dwdp.cpp  tmp2kc_o5jm_dwdp_colptrs.cpp  tmp2kc_o5jm_dwdp_rowvals.cpp  tmp2kc_o5jm_dwdx_colptrs.cpp  tmp2kc_o5jm_dwdx_rowvals.cpp  tmp2kc_o5jm_dxdotdp_explicit.cpp  tmp2kc_o5jm_dxdotdp_explicit_colptrs.cpp  tmp2kc_o5jm_dxdotdp_explicit_rowvals.cpp  tmp2kc_o5jm_dxdotdp_implicit_colptrs.cpp  tmp2kc_o5jm_dxdotdp_implicit_rowvals.cpp  tmp2kc_o5jm_dxdotdw.cpp  tmp2kc_o5jm_dxdotdw_colptrs.cpp  tmp2kc_o5jm_dxdotdw_rowvals.cpp  tmp2kc_o5jm_dydp.cpp  tmp2kc_o5jm_dydx.cpp  tmp2kc_o5jm_sigmay.cpp  (+14 more)
amici_models/tmp2kc_o5jm/swig/: tmp2kc_o5jm.i  tmp2kc_o5jm_wrap.cpp
amici_models/tmp2kc_o5jm/tmp2kc_o5jm/: __init__.py  tmp2kc_o5jm.py
amici_models/tmp_akih_pn/: CMakeLists.txt  compileMexFile.m  dxdotdp_implicit.h  p.h  setup.py  sigmay.h  spl.h  tmp_akih_pn.cpp  tmp_akih_pn.h  tmp_akih_pn_J.cpp  tmp_akih_pn_JB.cpp  tmp_akih_pn_JDiag.cpp  tmp_akih_pn_JSparse.cpp  tmp_akih_pn_JSparseB.cpp  tmp_akih_pn_JSparseB_colptrs.cpp  tmp_akih_pn_JSparseB_rowvals.cpp  tmp_akih_pn_JSparse_colptrs.cpp  tmp_akih_pn_JSparse_rowvals.cpp  tmp_akih_pn_Jy.cpp  tmp_akih_pn_dJydsigmay.cpp  tmp_akih_pn_dJydy.cpp  tmp_akih_pn_dJydy_colptrs.cpp  tmp_akih_pn_dJydy_rowvals.cpp  tmp_akih_pn_dsigmaydp.cpp  tmp_akih_pn_dspline_slopesdp.cpp  tmp_akih_pn_dspline_valuesdp.cpp  tmp_akih_pn_dwdp.cpp  tmp_akih_pn_dwdp_colptrs.cpp  tmp_akih_pn_dwdp_rowvals.cpp  tmp_akih_pn_dwdx_colptrs.cpp  tmp_akih_pn_dwdx_rowvals.cpp  tmp_akih_pn_dxdotdp_explicit.cpp  tmp_akih_pn_dxdotdp_explicit_colptrs.cpp  tmp_akih_pn_dxdotdp_explicit_rowvals.cpp  tmp_akih_pn_dxdotdp_implicit_colptrs.cpp  tmp_akih_pn_dxdotdp_implicit_rowvals.cpp  tmp_akih_pn_dxdotdw.cpp  tmp_akih_pn_dxdotdw_colptrs.cpp  tmp_akih_pn_dxdotdw_rowvals.cpp  tmp_akih_pn_dydp.cpp  (+14 more)
amici_models/tmp_akih_pn/swig/: tmp_akih_pn.i  tmp_akih_pn_wrap.cpp
amici_models/tmp_akih_pn/tmp_akih_pn/: __init__.py  tmp_akih_pn.py
amici_models/tmpif24ue8s/: CMakeLists.txt  compileMexFile.m  my.h  setup.py  sspl.h  tmpif24ue8s.cpp  tmpif24ue8s.h  tmpif24ue8s_J.cpp  tmpif24ue8s_JB.cpp  tmpif24ue8s_JDiag.cpp  tmpif24ue8s_JSparse.cpp  tmpif24ue8s_JSparseB.cpp  tmpif24ue8s_JSparseB_colptrs.cpp  tmpif24ue8s_JSparseB_rowvals.cpp  tmpif24ue8s_JSparse_colptrs.cpp  tmpif24ue8s_JSparse_rowvals.cpp  tmpif24ue8s_Jy.cpp  tmpif24ue8s_dJydsigmay.cpp  tmpif24ue8s_dJydy.cpp  tmpif24ue8s_dJydy_colptrs.cpp  tmpif24ue8s_dJydy_rowvals.cpp  tmpif24ue8s_dsigmaydp.cpp  tmpif24ue8s_dspline_slopesdp.cpp  tmpif24ue8s_dspline_valuesdp.cpp  tmpif24ue8s_dwdp.cpp  tmpif24ue8s_dwdp_colptrs.cpp  tmpif24ue8s_dwdp_rowvals.cpp  tmpif24ue8s_dwdx_colptrs.cpp  tmpif24ue8s_dwdx_rowvals.cpp  tmpif24ue8s_dxdotdp_explicit.cpp  tmpif24ue8s_dxdotdp_explicit_colptrs.cpp  tmpif24ue8s_dxdotdp_explicit_rowvals.cpp  tmpif24ue8s_dxdotdp_implicit_colptrs.cpp  tmpif24ue8s_dxdotdp_implicit_rowvals.cpp  tmpif24ue8s_dxdotdw.cpp  tmpif24ue8s_dxdotdw_colptrs.cpp  tmpif24ue8s_dxdotdw_rowvals.cpp  tmpif24ue8s_dydp.cpp  tmpif24ue8s_dydx.cpp  tmpif24ue8s_sigmay.cpp  (+12 more)
amici_models/tmpif24ue8s/swig/: tmpif24ue8s.i  tmpif24ue8s_wrap.cpp
amici_models/tmpif24ue8s/tmpif24ue8s/: __init__.py  tmpif24ue8s.py
code/: create_basic_sir_model.py  create_model.py  example_to_be_changed.py  optimal_df.pkl  sbml_definitions.py  test.xml
configurations/: environment.yml  matplotlibrc
paper/: main.aux  main.bbl  main.blg  main.lof  main.lot  main.out  main.tex  main.toc
scripts/: run_content.py  run_update.py
vaccination_dir/: CMakeLists.txt  compileMexFile.m  dwdp.h  dxdotdp_implicit.h  my.h  p.h  setup.py  sigmay.h  sspl.h  vaccination.cpp  vaccination.h  vaccination_JSparseB.cpp  vaccination_JSparseB_colptrs.cpp  vaccination_JSparseB_rowvals.cpp  vaccination_JSparse_rowvals.cpp  vaccination_Jy.cpp  vaccination_dJydsigmay.cpp  vaccination_dJydy.cpp  vaccination_dJydy_colptrs.cpp  vaccination_dJydy_rowvals.cpp  vaccination_dsigmaydp.cpp  vaccination_dspline_slopesdp.cpp  vaccination_dspline_valuesdp.cpp  vaccination_dwdp.cpp  vaccination_dwdp_colptrs.cpp  vaccination_dwdp_rowvals.cpp  vaccination_dwdx_colptrs.cpp  vaccination_dwdx_rowvals.cpp  vaccination_dxdotdp_explicit.cpp  vaccination_dxdotdp_explicit_rowvals.cpp  vaccination_dxdotdp_implicit_colptrs.cpp  vaccination_dxdotdp_implicit_rowvals.cpp  vaccination_dxdotdw.cpp  vaccination_dxdotdw_colptrs.cpp  vaccination_dxdotdw_rowvals.cpp  vaccination_dydp.cpp  vaccination_dydx.cpp  vaccination_sigmay.cpp  vaccination_sx0.cpp  vaccination_w.cpp  (+7 more)
(+562 files in other folders)
